fix: fix inject global vars

--- a/examples/user.tmpl
+++ b/examples/user.tmpl
@@ -1,4 +1,4 @@
 user:
     id: {{ vars.local.user.id }}
     name: {{ vars.local.user.name }}
-    city: {{ vars.global.user.city }}
+    city: {{ vars.global.city }}
