feat: inject environment variables to config

--- a/examples/user.tmpl
+++ b/examples/user.tmpl
@@ -2,3 +2,7 @@ user:
     id: {{ vars.local.user.id }}
     name: {{ vars.local.user.name }}
     city: {{ vars.global.city }}
+    contacts:
+        phone:
+            country: ru
+            number: {{ vars.local.user.phone_number }}
